: Updated SteamRep section on profile pages to use updated API and safer code
: Updated market code so that an items lowest price is shown on subsequent pages
: Fixed a bug where Steam Card Exchange links would not display properly on store pages
: Fixed a bug where the Ukraine region had an incorrect ISO code
: Fixed a bug where SteamDB links were not correctly formed on some pages


v9.2
-----
+ Added Steam review rating scores to users wishlists
+ Added OpenCritic.com reviews to store pages
+ Added a button to toggle live market updates for popular items on or off
+ Added a confirmation dialog when emptying your shopping cart
+ Add to Cart buttons will now display on larger wishlists
+ Added a "View badge progress" button to booster packs in inventory and on trading cards in market
+ Added an option for viewing user's wishlist data on their profile
: Fixed a bug that caused other users inventory to not load price information under some circumstances
: Updated age gate bypass to work with additional new age gate types
: Fixed Steam store main menu dropdowns not being hidden on mouse out
: Fixed issues on homepage when hiding the sidebar at some zoom levels and lower resolutions
: Improved performance on store pages for users with large purchase histories
: Fixed a bug where emoticons weren't correctly highlighted as owned on market pages
: Fixed a bug in custom holiday profile themes that effected legitimate users of that theme
: Fixed a bug where filtering a wishlist to items with coupons wouldn't work correctly
: Fixed a bug that caused DLC selection on store pages not to work correctly
: Fixed a bug that caused Early Access and coupon headers to not display correctly on the store

v9.1.1
-----
: Updated the advanced inventory controls to work with the new layout, they are now enabled by default
: Fixed a bug where site icons would display incorrectly on profiles if the display style was set to none