@@ -8,6 +8,7 @@
 : Fixed a bug where Steam Card Exchange links would not display properly on store pages
 : Fixed a bug where the Ukraine region had an incorrect ISO code
 : Fixed a bug where SteamDB links were not correctly formed on some pages
+- Removed market section totals as they conflicted with new market page updates
 
 
 v9.2
